--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-rate-limit": "^6.9.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^2.3.3"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
+    "uuid": "^9.0.0"
   },
   "rules": {
     "no-console": [
